fix: 記事作成エラーを修正

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # Cohere API Key for embeddings (optional)
 CO_API_KEY=your_cohere_api_key_here
 
+# Google API Key
+GOOGLE_API_KEY=AIzaSyDG0ZkUXJGiKjUehitK38HxhtBjqtcJseU
+
 # =============================================================================
 # Database Configuration
 # =============================================================================
